[gd_scene load_steps=3 format=3 uid="uid://tquacmjw5g4q"]

[ext_resource type="Script" path="res://components/exit_menu/ExitMenu.gd" id="1_cb3w1"]
[ext_resource type="Texture2D" uid="uid://bt87st5yo841i" path="res://assets/graphical_assets/parallax/color.tga" id="1_g0cof"]

[node name="ExitMenu" type="Control"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cb3w1")
metadata/_edit_use_anchors_ = true

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_g0cof")

[node name="ExitMenu" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.223633
anchor_top = 0.395833
anchor_right = 0.776367
anchor_bottom = 0.604167
offset_left = 263.0
offset_top = 40.0
offset_right = -263.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="ExitMenu"]
layout_mode = 2
text = "¿Estás seguro de que deseas regresar al menú principal?"
horizontal_alignment = 1
vertical_alignment = 1

[node name="OptionsContainer" type="HBoxContainer" parent="ExitMenu"]
layout_mode = 2
alignment = 1

[node name="YesBtn" type="Button" parent="ExitMenu/OptionsContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
text = "Sí"

[node name="NoBtn" type="Button" parent="ExitMenu/OptionsContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
text = "No"

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="ExitMenu/OptionsContainer/YesBtn" to="." method="_on_yes_btn_pressed"]
[connection signal="pressed" from="ExitMenu/OptionsContainer/NoBtn" to="." method="_on_no_btn_pressed"]
